# pg-todos

./: .env  .gitignore  Cargo.toml  Makefile  README.md
migrations/2024-06-01-151651_create_tasks/: up.sql
scripts/: create_story.lua
src/: config.rs  domain.rs  lib.rs  main.rs
src/api/: ctx.rs  dto.rs  mod.rs  status.rs  story.rs  task.rs
src/config/: database.rs  mod.rs  tcp.rs
src/error/: http.rs  mod.rs
src/repo/: mod.rs  sql.rs  statements.rs  story.rs  task.rs
